tests/invalid/subscript_aug_assign_non_subscriptable/main.py
def main() -> None:
    x: int = 1
    x[0] += 1
